@@ -7,12 +7,9 @@ hurd|The GNU Hurd console server,
 # Hard reset.
 	rs1=\EM,
 
-# Compatibility:
-# to vt100: We don't specify <xenl>, as we don't have the
-# eat_newline_glitch.  We don't support scrolling regions.  We don't
-# support setting/removing tab stops.
-# to linux: W, we don't have PC character set.  We don't have insert
-# mode.
+# Note about compatibility to vt100: We don't specify <xenl>, as we
+# don't have the eat_newline_glitch.  We don't support setting or
+# removing tab stops (hts/tbc).
 
 # Cursor related capabilities.
 
@@ -82,9 +79,8 @@ hurd|The GNU Hurd console server,
 	il1=\E[L, il=\E[%p1%dL,
 # Delete one line (P1 lines).
 	dl1=\E[M, dl=\E[%p1%dM,
-# Scroll the whole screen one line (P1 lines) upwards.
-# XXX Good optimization is to use ^J as Linux, although this will put
-# things into the scrollback buffer, which might not be what we want.
+# Scroll the whole screen one line (P1 lines) upwards.  We don't use
+# ^J, because this could put things into the scrollback buffer.
 	ind=\E[S, indn=\E[%p1%dS,
 # Scroll the whole screen one line (P1 lines) downwards.
 	rin=\E[%p1%dT, ri=\E[T,
@@ -116,15 +112,10 @@ hurd|The GNU Hurd console server,
 	khome=\E[1~, kich1=\E[2~, kdch1=\E[3~, kend=\E[4~,
 # Keycode for previous (next) page key.
 	kpp=\E[5~, knp=\E[6~,
-# XXX When we implement this.
 # Keycode for center of keypad area.
-#	kb2=\E[G
-# XXX When we implement this.
+	kb2=\E[G,
 # Mouse event has occured.
-#	kmous=\E[M,
-# XXX How does this come here?  We don't have Lower Left.
-#	kll=\E[F,
-
+	kmous=\E[M,
 
 # Text attribute capabilities.
 	acsc=++\,\,--..00ii``aaffgghhjjkkllmmnnooppqqrrssttuuvvwwxxyyzz{{||}}~~,
@@ -138,7 +129,9 @@ hurd|The GNU Hurd console server,
 # Video attributes colliding with color.
 # ORed: A_STANDOUT 1, A_UNDERLINE 2, A_REVERSE 4, A_BLINK 8, A_DIM 16,
 # A_BOLD 32, A_INVIS 64
-# We do our own display optimization, depending on the display driver.
+# We don't define this as we do our own display optimization,
+# depending on the display driver.  Alternatively, we could provide
+# different terminfo entries.
 #	ncv#18,
 # Set background (foreground) color.
 	setab=\E[4%p1%dm, setaf=\E[3%p1%dm,
@@ -161,7 +154,6 @@ hurd|The GNU Hurd console server,
 # Enable (disable) real bold (not intensity bright) mode.  This is a
 # GNU extension.
 	gsbom=\E[>1h, grbom=\E[>1l,
-# XXX Linux has those also for rmpch and smpch.
 # Enable (disable) alternative character set.
 	smacs=\E[11m, rmacs=\E[10m,
 # Set all attributes.
