@@ -1,5 +1,9 @@
 2002-09-18  Marcus Brinkmann  <marcus@gnu.org>
 
+	* hurd.ti: Enable <kb2> and <kmouse>, fix the comments.
+	* display.c (handle_esc_bracket_question_hl): Handle escape
+	bracket 1000 h/l for XTerm-like mouse tracking enable/disable.
+
 	* display.c (handle_esc_bracket): Use scrolling region for <ind>,
 	<indn>, <ri>, <rin>, <il1>, <il>, <dl1> and <dl>.  Also fix
 	off-by-one error in <ri>, <rin>.
